Ensure deletion modal isn't cut off

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -208,8 +208,8 @@ a.tag > .text-container:hover {
   position: absolute;
   background: #ededed;
   border: #cdcdcd 1px solid;
-  top: 65px;
-  left: 36px;
+  top: 30px;
+  left: 30px;
   width: calc(100% - 60px);
   z-index: 1;
   padding-top: 6px;
@@ -219,7 +219,7 @@ a.tag > .text-container:hover {
 
   .p-key {
     color: #616a71 !important;
-    
+
     div {
       padding-top: 4px;
     }
